Cherry-pick r284082. rdar://problem/84351872

Override guessed color space for incoming H.264/265 streams
    https://bugs.webkit.org/show_bug.cgi?id=231353
    <rdar://problem/83969311>

    Reviewed by Youenn Fablet.

    When the VTDecompressionSession decodes incoming H.264/H.265 samples,
    it puts guessed color space attachments on the CVPixelBuffer, and the
    guesses are based on video resolution. WebRTC streams however default
    to being sRGB. So this patch overrides a guess with what we know the
    stream will be. (Once we support different color spaces in WebRTC
    video streams we'll need to adjust this.)

    * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH264.mm:
    (overrideColorSpaceAttachmentsIfNeeded):
    (decompressionOutputCallback):
    * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH265.mm:
    (overrideColorSpaceAttachmentsIfNeeded):
    (h265DecompressionOutputCallback):

    Canonical link: https://commits.webkit.org/242910@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284082 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/240672.236@safari-612-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-612-branch@284345 268f45cc-cd09-0410-ab3c-d52691b4dbfc